--- a/memory/CMakeLists.txt
+++ b/memory/CMakeLists.txt
@@ -69,7 +69,10 @@ add_library ( ${memory_LIBRARY} SHARED ${CPP_SOURCES} )
 
 # set ( CMAKE_INSTALL_PREFIX /home/brandes/local )
 
-find_package( Boost REQUIRED COMPONENTS )
+if ( NOT CXX_SUPPORTS_C11 )
+    find_package( Boost REQUIRED COMPONENTS )
+    include_directories( ${Boost_INCLUDE_DIR} )
+endif ( NOT CXX_SUPPORTS_C11 )
 
 foreach ( module common logging tasking )
 
@@ -86,8 +89,6 @@ foreach ( module common logging tasking )
    target_link_libraries( ${memory_LIBRARY} ${${module}_LIBRARY} )
 
 endforeach()
-
-include_directories( ${Boost_INCLUDE_DIR} )
 
 if ( WIN32 )
     add_definitions ( -DCOMMON_COMPILING_DLL )
