--- a/tracing/CMakeLists.txt
+++ b/tracing/CMakeLists.txt
@@ -67,7 +67,10 @@ include_directories( ${tracing_INCLUDE_DIR} )
 
 ### add definitions ###
 
-find_package( Boost REQUIRED COMPONENTS )
+if ( NOT CXX_SUPPORTS_C11 )
+    find_package( Boost REQUIRED COMPONENTS )
+    include_directories( ${Boost_INCLUDE_DIR} )
+endif ( NOT CXX_SUPPORTS_C11 )
 
 # set ( CMAKE_INSTALL_PREFIX /home/brandes/local )
 
@@ -86,8 +89,6 @@ foreach ( module common logging )
    target_link_libraries( ${tracing_LIBRARY} ${${module}_LIBRARY} )
 
 endforeach()
-
-include_directories( ${Boost_INCLUDE_DIR} )
 
 if ( WIN32 )
     add_definitions ( -DCOMMON_COMPILING_DLL )
