--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -36,6 +36,8 @@ cmake_minimum_required ( VERSION 2.8 )
 
 project ( common CXX )
 
+# import SetCPPFlags, ....
+
 set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 
 # Set default build type to RELEASE, can be changed via ccmake
