--- a/logging/examples/CMakeLists.txt
+++ b/logging/examples/CMakeLists.txt
@@ -49,8 +49,9 @@ find_package ( Boost COMPONENTS thread system )
 
 if ( Boost_THREAD_FOUND )
     if ( Boost_SYSTEM_FOUND )
-        add_executable( LogThreads LogThreads.cpp )
-        target_link_libraries( LogThreads ${logging_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} )
+        include_directories ( ${Boost_INCLUDE_DIR} )
+        add_executable ( LogThreads LogThreads.cpp )
+        target_link_libraries ( LogThreads ${logging_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} )
     else ()
         message ( STATUS "Boost system library not found" )
     endif ()
