Removed lama::Exception to avoid confusion with common::Exception

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -112,7 +112,7 @@ set ( SOURCE_FILES
         TFQMRTest
         TimerTest
         TracingTest
-        UtilsTest
+#        UtilsTest
         VectorTest
     )
 
