--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -40,14 +40,7 @@ project ( common CXX )
 
 set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 
-# Set default build type to RELEASE, can be changed via ccmake
-
-if ( NOT CMAKE_BUILD_TYPE )
-   set ( CMAKE_BUILD_TYPE RELEASE CACHE STRING
-      "Choose the type of build, options are: None Debug Release."
-      FORCE)
-endif ( NOT CMAKE_BUILD_TYPE )
-
+include ( SetBuildFlags )
 include ( SetCPPFlags )
 
 ### Define variables needed for common library 
