--- a/tasking/CMakeLists.txt
+++ b/tasking/CMakeLists.txt
@@ -46,14 +46,7 @@ mark_as_advanced( tasking_LIBRARY tasking_INCLUDE_DIR )
 
 set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 
-# Set default build type to RELEASE, can be changed via ccmake
-
-if ( NOT CMAKE_BUILD_TYPE )
-   set ( CMAKE_BUILD_TYPE RELEASE 
-        CACHE STRING "Choose the type of build, options are: None Debug Release."
-        FORCE)
-endif ( NOT CMAKE_BUILD_TYPE )
-
+include ( SetBuildFlags )
 include ( SetCPPFlags )
 
 ### Source files for tasking library
