--- a/src/examples/make.inc.in
+++ b/src/examples/make.inc.in
@@ -33,5 +33,12 @@
 LAMA_ROOT=${CMAKE_INSTALL_PREFIX}
 BOOST_INCLUDE_DIR=${Boost_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
-CXX_FLAGS=${CMAKE_CXX_FLAGS_RELEASE} ${ADDITIONAL_CXX_FLAGS_RELEASE}
-LAMA_LD_FLAGS=${ADDITIONAL_LINKER_FLAGS}
+CXX_FLAGS=${CMAKE_CXX_FLAGS} ${ADDITIONAL_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} ${ADDITIONAL_CXX_FLAGS_RELEASE}
+LAMA_LD_FLAGS=${LAMA_USER_LINK_FLAGS}
+
+# CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS} 
+# ADDITIONAL_CXX_FLAGS=${ADDITIONAL_CXX_FLAGS} 
+# CMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE} 
+# ADDITIONAL_WARNING_FLAGS=${ADDITIONAL_WARNING_FLAGS} 
+# LAMA_LINK_LIBRARIES=${LAMA_LINK_LIBRARIES}
+# LAMA_USER_LINK_LIBRARIES=${LAMA_USER_LINK_LIBRARIES}
