--- a/src/lama/lama.hpp.in
+++ b/src/lama/lama.hpp.in
@@ -45,7 +45,7 @@
 
 #define LAMA_ASSERT_LEVEL_${LAMA_ASSERT_LEVEL}
 #define LAMA_LOG_LEVEL_${LAMA_LOG_LEVEL}
-#define LAMA_TRACE_${LAMA_TRACE_LEVEL}
+#define ${LAMA_TRACING_FLAG}
 #define LAMA_OMP_SCHEDULE ${LAMA_OMP_SCHEDULE}
 
 #define LAMA_CUDA_COMPUTE_CAPABILITY ${CUDA_COMPUTE_CAPABILITY}
