--- a/logging/CMakeLists.txt
+++ b/logging/CMakeLists.txt
@@ -34,7 +34,7 @@
 cmake_minimum_required ( VERSION 2.8 )
 
 ### Set PROJECT NAME / supported LANGUAGES
-project( logging CXX )
+project( logging CXX C )
 
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
