more macros replaced

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -200,15 +200,15 @@ set ( LAMA_USER_LINK_LIBRARIES "${LAMA_USER_LINK_LIBRARIES} -lscai_common" )
 set ( LAMA_USER_LINK_LIBRARIES "${LAMA_USER_LINK_LIBRARIES} -lscai_logging" )
 set ( LAMA_USER_LINK_LIBRARIES "${LAMA_USER_LINK_LIBRARIES} -lscai_tasking" )
 set ( LAMA_USER_LINK_LIBRARIES "${LAMA_USER_LINK_LIBRARIES} -lscai_memory" )
-if ( LAMA_TRACE_LEVEL STREQUAL "ON" )
+if ( SCAI_TRACE_LEVEL STREQUAL "ON" )
     set ( LAMA_USER_LINK_LIBRARIES "${LAMA_USER_LINK_LIBRARIES} -lscai_tracing" )
-endif ( LAMA_TRACE_LEVEL STREQUAL "ON" )
+endif ( SCAI_TRACE_LEVEL STREQUAL "ON" )
 
 set ( LAMA_LINK_LIBRARIES ${SCAI_COMMON_LIBRARY} )
 set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${SCAI_LOGGING_LIBRARY} )
 set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${SCAI_TASKING_LIBRARY} )
 set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${SCAI_MEMORY_LIBRARY} )
-if ( LAMA_TRACE_LEVEL STREQUAL "ON" )
+if ( SCAI_TRACE_LEVEL STREQUAL "ON" )
     set( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${SCAI_TRACING_LIBRARY} )
 endif ( )
 
