--- a/scai/lama/lama.hpp.in
+++ b/scai/lama/lama.hpp.in
@@ -45,7 +45,7 @@
 
 #define SCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
 #define SCAI_LOG_LEVEL_${SCAI_LOG_LEVEL}
-#define LAMA_TRACE_${LAMA_TRACE_LEVEL}
+#define SCAI_TRACE_${SCAI_TRACE_LEVEL}
 #define LAMA_OMP_SCHEDULE ${LAMA_OMP_SCHEDULE}
 
 #define SCAI_CUDA_COMPUTE_CAPABILITY ${CUDA_COMPUTE_CAPABILITY}
